--- a/projects/ngx-tiptap-lib/theme/default.scss
+++ b/projects/ngx-tiptap-lib/theme/default.scss
@@ -36,6 +36,7 @@ $color-grey: #dddddd;
         border-radius: 2px;
 
         i {
+          cursor: pointer;
           font-size: 16px;
         }
 
